--- a/css/workout.css
+++ b/css/workout.css
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans');
+
 .navbar-default .navbar-nav > li > a:hover {
     color: white;
 }
@@ -65,6 +68,8 @@ body {
 	text-align: center;
 }
 
-.pb-center {
+h1 {
 	text-align: center;
+	font-family: 'Josefin Sans', sans-serif;
 }
+
